--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:image:alt"          content="{{ogImageAlt}}">
     <meta property="fb:app_id"             content="1107023486046982">
 
-    <link rel="stylesheet" href="https://www.dreambeem.com/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://www.dreambeem.com/bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="https://www.dreambeem.com/styles/main.css">
     <link rel="stylesheet" href="https://www.dreambeem.com/bower_components/material-design-icons/sprites/css-sprite/sprite-navigation-grey600.css">
